syntax = "proto3";
package global;
option go_package = "platform/go/proto/global";

import "google/api/annotations.proto";


service Global {
    rpc SayHello (GreetRequest) returns (GreetReply) {
      option (google.api.http) = {
        get: "/v1/global/hello/{name}"
      };
    }
  }
  
  message GreetRequest {
    string name = 1;
  }
    
  message GreetReply {
    string message = 1;
  }